[project]
authors = [{name = "Wouter-Michiel Vierdag", email = "w-mv@hotmail.com"}]
dependencies = []
name = "ngff-transform-protocols"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
ngff-transform-protocols = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pytest-mypy-plugins = ">=4.0.1,<5"
pytest = ">=9.0.3,<10"

[tool.pixi.feature.test.pypi-dependencies]
ome-zarr-models = { path = "../ome-zarr-models-py", editable = true }

[tool.pixi.feature.visualization.dependencies]
networkx = ">=3.6.1,<4"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test = { features = ["test", "visualization"], solve-group = "default" }
visualization = { features = ["visualization"], solve-group = "default" }

